# fastapi-migration

./: .env  .gitignore  README.md  env-sample  pyproject.toml  run.py
alembic/: env.py
alembic/versions/: 618905b7708b_initial_migration.py  b23fbebc1338_default_is_active_false.py  b3814f4036d2_role_and_is_active_in_user_model.py
app/: auth_security.py  db_config.py  main.py  utils.py
app/core/: auth_security.py  config.py  db_config.py  logger_config.py  redis_config.py
app/models/: user_model.py
app/routes/: auth_routes.py
app/schemas/: common_schema.py  user_schema.py
app/services/: redis_service.py  user_service.py
app/templates/email/: verify_account.html
app/utils/: __init__.py  common_utils.py  email_utils.py  exception_utils.py
