[project]
name = "fastapi-migration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.14.0",
    "asyncer>=0.0.8",
    "asyncpg>=0.30.0",
    "bcrypt>=4.2.1",
    "fastapi[standard]>=0.115.6",
    "python-dotenv>=1.0.1",
    "python-jose>=3.3.0",
    "sqlalchemy[asyncio]>=2.0.36",
]
